<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/searchable_spinner_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:text="Select an archetype"
            android:textColor="@color/white"
            android:textSize="19dp"
            android:paddingVertical="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/text_search_filter"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="@color/white"
            app:boxStrokeColor="@color/white"
            android:textColorHint="@color/white"
            app:counterOverflowTextColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spinnerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            tools:listitem="@layout/search_list_item"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cleanFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_search_button_text"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/archetypeLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#CC25231F"
        android:gravity="center"
        android:orientation="vertical">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_loading_archetypes"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</FrameLayout>